@@ -171,6 +171,7 @@ Version 0.1 Initial release
 		%	06/19/2017 added functions to happen when compile() is called
 		%	06/21/2017 fixed syntax issues
 		%	06/23/2017 fixed multitude of issues with Tgml file reading and validation
+		%	06/26/2017 fixed various issues with set_exposed_properties()
 	#Translate
 		+	06/07/2017 class added
 		%	06/09/2017 __init__() changed for proper inheritance
